# external_projects-garage-client_retainer_hours_tracker

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .npmrc  .prettierrc.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.coolify.yml  docker-compose.local.yml  docker-compose.yml  entrypoint.sh  esbuild.config.mjs  nginx.conf  package.json  pnpm-lock.yaml  pyproject.toml  settings.example.ini  settings.ini  tsconfig.json
.devcontainer/: devcontainer.json  post_create.sh
core/: app_settings.py  settings.py  urls.py
core/backends/: SuperuserOnlyModelBackend.py  __init__.py
core/utils/: env.py
database/factories/: client_factory.py  employee_factory.py
database/seeders/: core_seeder.py  dev_seeder.py  seeder.py
docs/: DEPLOYMENT.md
scripts/: clone_settings.sh  gen-release-notes.sh  gen_ico.py  setup_settings.sh
static/src/: global.css  index.ts  timer.ts
tracker/: admin.py  auth_backend.py  context_processors.py  forms.py  hours.py  models.py  pdf.py  queries.py  reports.py  timers.py  urls.py
tracker/features/: nav_links.py
tracker/management/commands/: elevate_admin.py  seed.py
tracker/migrations/: 0001_initial.py  0002_client.py  0003_alter_client_notes_clientterm.py  0004_timeentry.py  0005_overagebilling.py  0006_clientterm_dev_minutes_from_conversion_and_more.py  0007_alter_timeentry_term.py  0008_backfill_time_entry_terms.py  0009_retainer.py  0010_hourspurchase.py  0011_convert_excess_overage_billing.py  0012_hourspurchase_from_historical_billing.py  0013_companyprofile.py  0014_client_billing_address.py  0015_reporttemplate.py  0016_overagereport.py  0017_seed_default_report_template.py  0018_fix_clientterm_boundary_drift.py  0019_workorder_workorderitem_timersegment_and_more.py
tracker/templates/: _retainer_card.html  _work_order_card.html  attributions.html  base.html  client_detail.html  client_form.html  client_list.html  html_base.html  log_time.html  login.html  new_term.html  retainer_detail.html  retainer_list.html  unauthenticated_base.html  work_order_detail.html  work_order_list.html  work_order_list_all.html
tracker/templates/dashboard/: base.html  dashboard.html
tracker/templates/reports/: default.html
tracker/templatetags/: hours_tags.py
tracker/views/: AllWorkOrdersView.py  AttributionsView.py  BillOverageView.py  ClientDetailView.py  ClientListView.py  CompleteWorkOrderItemView.py  ConfirmOverageView.py  DashboardView.py  DeleteClientView.py  DeleteRetainerView.py  DeleteTimeEntryView.py  DeleteWorkOrderView.py  DownloadReportView.py  EditClientView.py  EditRetainerView.py  EditWorkOrderView.py  LogTimeView.py  LoginPageView.py  NewClientView.py  NewRetainerView.py  NewTermView.py  NewWorkOrderView.py  PurchaseHoursView.py  ReportView.py  RetainerDetailView.py  RetainerListView.py  StartTimerView.py  StopTimerView.py  TimerStatusView.py  WorkOrderDetailView.py  WorkOrderListView.py  __init__.py
