[project]
name = "client-retainer-hours-tracker"
version = "0.0.0"
description = "App for tracking client retainer hours"
requires-python = ">=3.14"
dependencies = [
  "factory-boy>=3.3.3",
  "Django>=6.0.3",
  "whitenoise>=6.9.0",
  "django-environ>=0.13",
  "mozilla-django-oidc>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest-django",
  "pytest-cov",
  "black>=26.3.0",
  "django-browser-reload>=1.21.0",
  "django-watchfiles>=1.4.0",
  "pre-commit>=4.5.1",
]

[tool.black]
line-length = 80
exclude = '''
/(
    migrations
  | venv
  | .git
)/
'''
