[project]
name = "client-retainer-hours-tracker"
version = "0.1.0-alpha.6"
description = "App for tracking client retainer hours"
requires-python = ">=3.14"
dependencies = [
  "factory-boy>=3.3.3",
  "Django>=6.0.3",
  "whitenoise>=6.9.0",
  "django-environ>=0.13",
  "mozilla-django-oidc>=4.0",
  "gunicorn>=23.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest-django",
  "pytest-cov",
  "black>=26.3.0",
  "django-browser-reload>=1.21.0",
  "django-watchfiles>=1.4.0",
  "pre-commit>=4.5.1",
  "commitizen>=4.16.3",
  "Pillow>=11.0.0",
  "CairoSVG>=2.7.1",
]

[tool.black]
line-length = 80
exclude = '''
/(
    migrations
  | venv
  | .git
)/
'''

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0-alpha.6"
version_scheme = "semver2"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
changelog_merge_prerelease = true
version_files = [
  "pyproject.toml:^version",
]

[tool.commitizen.change_type_map]
feat = "Features"
fix = "Bug Fixes"
perf = "Performance Improvements"
refactor = "Refactoring"
